# HELENE

./: .gitignore  README.md  ROS_InstallationGuide.md  helene_specs.md
hardware_build/print files/col1/: B1_Basis_Main.stl  B22_Gelenk3_Deckel.stl
hardware_build/print files/col2/: B12_Gelenk2_Festlager_Gelenkfassung.stl  B13_Gelenk2_Welle_Abschluss.stl  B14_Gelenk2_Lagerdecke.stl  B15_Gelenk3_Hauptteil_Unten.stl  B16_Gelenk3_Hauptteil_Oben.stl  B20_Gelenk3_Welle_Abschluss.stl  B21_Gelenk3_Motorhalter.stl  B25_Gelenk4_Motorhalter.stl  B26_Gelenk4_Pulley.stl  B27_Gelenk4_Lagerdeckel.stl  B28_Gelenk4_5_Ubergang.stl  B30_Gelenk5_Welle.stl  B33_Gelenk6_main.stl  B34_Gelenk6_Deckel.stl  B35_Deckel_Elektronik.stl  B36_Lagerabstand.stl  B3_Basis_Lagerdecke.stl  B5_Basis_Pulley_klein.stl  B6_Basis_Pulley_klein2.stl  B7_Basis_Bodenplatte.stl
helene_ros/src/applications_helene/: CMakeLists.txt  package.xml  setup.py
helene_ros/src/applications_helene/launch/: realrobot.launch  simulation.launch
helene_ros/src/applications_helene/scripts/: helene_helper.py  main.py
helene_ros/src/applications_helene/src/: complete_data_logger.cpp  data_logger.cpp  demoPnP.cpp  demoSpeed.cpp  demoSpiral.cpp
helene_ros/src/controller_helene/: CMakeLists.txt  README.md  package.xml
helene_ros/src/controller_helene/launch/: robot.launch
helene_ros/src/controller_helene/msg/: jointPosition.msg
helene_ros/src/controller_helene/src/: my_robot_vel.cpp
helene_ros/src/end_effectors/: custom_end_effectors.md
helene_ros/src/end_effectors/example_end_effector/: CMakeLists.txt  package.xml
helene_ros/src/end_effectors/example_end_effector/urdf/: example_end_effector.urdf.xacro
helene_ros/src/end_effectors/led_head/: CMakeLists.txt  package.xml
helene_ros/src/end_effectors/led_head/include/led_head/: led_light_plugin.h
helene_ros/src/end_effectors/led_head/src/: led_light_plugin.cpp
helene_ros/src/end_effectors/led_head/urdf/: led_head.gazebo.xacro  led_head.urdf.xacro
helene_ros/src/end_effectors/needle/: CMakeLists.txt  package.xml
helene_ros/src/end_effectors/needle/include/needle/: needle_sensor_plugin.h
helene_ros/src/end_effectors/needle/src/: needle_sensor_plugin.cpp
helene_ros/src/end_effectors/needle/urdf/: needle.urdf.xacro
helene_ros/src/hw_description/: CMakeLists.txt  package.xml
helene_ros/src/hw_description/launch/: helene_upload.launch
helene_ros/src/hw_description/meshes/: Flansch.stl  Komponente1.stl  Komponente3.stl  Komponente4.stl  Komponente5.stl  Komponente6.stl
helene_ros/src/hw_description/urdf/: helene_hw.urdf  helene_with_tool.xacro
helene_ros/src/moveit_helene/: .setup_assistant  CMakeLists.txt  package.xml
helene_ros/src/moveit_helene/config/: fake_controllers.yaml  gazebo_controllers.yaml  helene.srdf  helene_servoing.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  ros_controllers_jog.yaml
helene_ros/src/moveit_helene/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  hardware_interface.launch  hardware_interface_jog.launch  helene_gazebo_controller_manager.launch.xml  helene_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  spacenav_cpp.launch  start_gazebo.launch  start_moveit.launch  trajectory_execution.launch.xml  warehouse.launch
linux_helpers/: Start_FULL_Datalogger.desktop  Start_Small_DataLogger.desktop  Start_helene.desktop  Start_helene_simulation.desktop  delete_icons.sh  install_icons.sh
